--- a/TechVJ/template/dl.html
+++ b/TechVJ/template/dl.html
@@ -10,7 +10,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Description" content="This is Temporary Site to Provide Content Like Softwares and other stuff releated tech By Extracting Files from Server and Serving 
-        the user Made By Tactition">
+        the user Made By Anime World ">
     <title>Self Improvment AudioBooks</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
@@ -42,7 +42,7 @@
                             class="mr-3 rounded-md" width="55" height="55">
                         <span
                             class="bg-clip-text sm:text-[25px] text-[20px] text-transparent bg-gradient-to-r from-pink-500 to-violet-500">
-                            Audiobooks Repository
+                            ANIME ONLINE PLAYER 
                         </span>
                     </a>
                 </div>
@@ -83,7 +83,7 @@
 
             <section class="lg:p-4 p-2 justify-content-center align-items-center text-center">
                 <a class="btn btn-outline-light btn-floating m-1 rounded-circle p-2 border-secondary wow animate__animated animate__fadeInDown animate__delay-1s hover:shadow-md hover:shadow-gray-400 hover:translate-y-[-5px] transition transition-all duration-200"
-                    href="https://telegram.me/tactition" target="_blank" role="button">
+                    href="https://telegram.me/RW7038" target="_blank" role="button">
                     <svg xmlns="http://www.w3.org/2000/svg" class="mx-auto" width="30" height="30" viewBox="0 0 50 50">
                         <defs>
                             <linearGradient id="admin-gradient" x1="32" x2="32" y1="10" y2="54.751"
@@ -106,7 +106,7 @@
 
                 <!-- Telegram -->
                 <a class="btn btn-outline-light btn-floating m-1 rounded-circle p-2 border-secondary wow animate__animated animate__fadeInDown animate__delay-1s hover:shadow-md hover:shadow-gray-400 hover:translate-y-[-5px] transition transition-all duration-200"
-                    href="https://t.me/Self_Improvement_Audiobooks" target="_blank" role="button">
+                    href="https://telegram.me/+NlYT3i_8CUc2NGI1" target="_blank" role="button">
                     <svg xmlns="http://www.w3.org/2000/svg" class="mx-auto" width="30" height="30" viewBox="0 0 50 50">
                         <defs>
                             <linearGradient id="telegram-gradient" x1="32" x2="32" y1="10" y2="54.751"
@@ -143,7 +143,7 @@
                 document.write(theDate.getFullYear()) 
         </script> Copyright :
             <a class="bg-clip-text text-[16px] text-transparent bg-gradient-to-r from-pink-500 to-violet-500 font-bold tracking-wide px-1"
-                href="https://telegram.me/tactition">Tactition</a>
+                href="https://telegram.me/RW7038">Tactition</a>
 
             All right reserved
         </div>
