--- a/TechVJ/template/req.html
+++ b/TechVJ/template/req.html
@@ -39,7 +39,7 @@
                             class="mr-3 rounded-md" width="55" height="55">
                         <span
                             class="bg-clip-text sm:text-[25px] text-[20px] text-transparent bg-gradient-to-r from-pink-500 to-violet-500">
-                            Audiobooks Repository
+                            ANIME WORLD PLAYER
                         </span>
                     </a>
                 </div>
@@ -258,7 +258,7 @@
             <div class="row d-flex w-100 justify-content-center align-items-center">
                 <div
                     class="col-lg-8 col-10  py-2 text-center bg-danger rounded-4 text-sm wow animate__animated animate__FadeIn">
-                    if Audiobook/Video is not playing ?It may be possibly because your browser or the player doesn't
+                    if Episode/Video is not playing ?It may be possibly because your browser or the player doesn't
                     support codec please download and watch.
                 </div>
             </div>
@@ -272,7 +272,7 @@
 
             <section class="lg:p-4 p-2 justify-content-center align-items-center text-center">
                 <a class="btn btn-outline-light btn-floating m-1 rounded-circle p-2 border-secondary wow animate__animated animate__fadeInDown animate__delay-1s hover:shadow-md hover:shadow-gray-400 hover:translate-y-[-5px] transition transition-all duration-200"
-                    href="https://telegram.me/tactition" target="_blank" role="button">
+                    href="https://telegram.me/RW7038" target="_blank" role="button">
                     <svg xmlns="http://www.w3.org/2000/svg" class="mx-auto" width="30" height="30" viewBox="0 0 50 50">
                         <defs>
                             <linearGradient id="admin-gradient" x1="32" x2="32" y1="10" y2="54.751"
@@ -295,7 +295,7 @@
 
                 <!-- Telegram -->
                 <a class="btn btn-outline-light btn-floating m-1 rounded-circle p-2 border-secondary wow animate__animated animate__fadeInDown animate__delay-1s hover:shadow-md hover:shadow-gray-400 hover:translate-y-[-5px] transition transition-all duration-200"
-                    href="https://t.me/Self_Improvement_Audiobooks" target="_blank" role="button">
+                    href="https://telegram.me/+NlYT3i_8CUc2NGI1" target="_blank" role="button">
                     <svg xmlns="http://www.w3.org/2000/svg" class="mx-auto" width="30" height="30" viewBox="0 0 50 50">
                         <defs>
                             <linearGradient id="telegram-gradient" x1="32" x2="32" y1="10" y2="54.751"
@@ -326,7 +326,7 @@
                         <li class="navbar-item bg-gradient-to-l from-pink-500 rounded-xl p-2 ">
                             <h5 class="text-gray-100 font-semibold text-sm"> Success is the journey of millions of
                                 failure and lots of hard work </h5> <sup
-                                class="badge  text-xs text-gray-300 font-monospace">-@tactition</sup>
+                                class="badge  text-xs text-gray-300 font-monospace">-@Anime_movies_V</sup>
                         </li>
                     </ul>
                 </div>
@@ -352,7 +352,7 @@
                     document.write(theDate.getFullYear()) 
             </script> Copyright :
             <a class="bg-clip-text text-[16px] text-transparent bg-gradient-to-r from-pink-500 to-violet-500 font-bold tracking-wide px-1"
-                href="https://telegram.me/tactition">Tactition</a>
+                href="https://telegram.me/RW7038">Anime world</a>
 
             All right reserved
         </div>
